<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.birju_000.collectingcaffeine.Settings">

    <Button
        android:id="@+id/clearExpensesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_expenses"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_below="@+id/clearBudgetsBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/clearBudgetsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_budgets"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="153dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="225dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/coffee"
        app:srcCompat="@mipmap/coffeelogo" />
</RelativeLayout>
