<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.birju_000.collectingcaffeine.Home">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/coffee"
        app:srcCompat="@mipmap/coffeelogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="Welcome Back!!"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="Budget"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/budget_left_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/budget_left_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="Money Left to spend"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/money_left_text"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/budget_left_text"
        android:layout_alignStart="@+id/budget_left_text"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="10dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/set_budget_button"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/set_budget"
        android:layout_below="@+id/money_left_text"
        android:layout_alignLeft="@+id/bought_coffee_btn"
        android:layout_alignStart="@+id/bought_coffee_btn" />

    <Button
        android:id="@+id/bought_coffee_btn"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_budget_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/bought_coffee" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bought_coffee_btn"
        android:layout_alignStart="@+id/bought_coffee_btn"
        android:layout_below="@+id/bought_coffee_btn"
        android:layout_marginTop="10dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/statistics_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/settings_btn"
        android:layout_alignBottom="@+id/settings_btn"
        android:layout_toEndOf="@+id/settings_btn"
        android:layout_toRightOf="@+id/settings_btn"
        android:text="@string/statistics" />
</RelativeLayout>
