<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.birju_000.collectingcaffeine.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/coffee"
        app:srcCompat="@mipmap/coffeelogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="Collecting Caffeine"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Collecting Caffeine" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/username_login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/password_login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName|textPassword"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/user_name_login"
        android:layout_alignStart="@+id/user_name_login" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="SIGN IN" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sign_in_btn"
        android:layout_alignLeft="@+id/sign_in_btn"
        android:layout_alignRight="@+id/sign_in_btn"
        android:layout_alignStart="@+id/sign_in_btn"
        android:layout_below="@+id/sign_in_btn"
        android:layout_marginTop="38dp"
        android:text="JOIN US" />
</RelativeLayout>
